--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     #image: robsantossilva/laravel-optmized
     build: .
     container_name: app
-    entrypoint: dockerize -template ./.docker/app_data/.env:.env -wait tcp://db:3306 -timeout 40s ./.docker/entrypoint.sh
+    entrypoint: dockerize -template ./.docker/app_data/env.tpl:.env -wait tcp://db:3306 -timeout 40s ./.docker/entrypoint.sh
     #entrypoint: dockerize -template ./.docker/app/.env:.env ./.docker/entrypoint.sh
     environment:
       - DB_HOST=db
